labs/nw-pod-busybox.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nwp-namespace
spec: {}

---

apiVersion: v1
kind: Pod
metadata:
  name: nwp-busybox
  namespace: nwp-namespace
spec:
  containers:
  - name: busybox
    image: busybox
    args: [ "/bin/sh" , "-c", "while true; do echo Hello from busybox; sleep 5;done" ]

---

apiVersion: v1
kind: Pod
metadata:
  labels:
    run: nwp-nginx
  name: nwp-nginx
spec:
  containers:
  - image: nginx
    name: nwp-nginx
    ports:
    - containerPort: 80
  dnsPolicy: ClusterFirst
  restartPolicy: Always
