labs/nw-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: denyall-network-policy
  namespace: nwp-namespace
spec:
  podSelector:
        matchLabels:
          user: manoj
  policyTypes:
  - Egress
